--- a/02 Python Setup/04 Package Manager.ipynb
+++ b/02 Python Setup/04 Package Manager.ipynb
@@ -29,7 +29,7 @@
     "    font-family: 'Poppins', sans-serif;\n",
     "    letter-spacing: 1px;\n",
     "  }\n",
-    "\n",
+    "  .container > .card:last-child { margin-bottom: 2rem; }\n",
     "  .container {\n",
     "    display: flex;\n",
     "    flex-direction: column;\n",
@@ -404,18 +404,6 @@
     "        <div class=\"card green\">\n",
     "            <h3>The Concept of Isolation</h3>\n",
     "            <p>Imagine one project needs <code>Django 3.0</code> and another needs <code>Django 4.0</code>. Installing them globally will break your system. A <strong>Virtual Environment</strong> creates a separate \"room\" for each project.</p>\n",
-    "        </div>\n",
-    "        <div class=\"card green\">\n",
-    "            <h3>Standard Workflow</h3>\n",
-    "            <p>Follow these steps to create and use an environment in your terminal:</p>\n",
-    "            <ul>\n",
-    "                <li><strong>Create:</strong> <code>python -m venv .venv</code></li>\n",
-    "                <li><strong>Activate (Windows):</strong> <code>.venv\\Scripts\\activate</code></li>\n",
-    "                <li><strong>Activate (Mac/Linux):</strong> <code>source .venv/bin/activate</code></li>\n",
-    "            </ul>\n",
-    "            <div class=\"note\">\n",
-    "                <strong>Pro Tip:</strong> Always name your environment folder <code>.venv</code>. Modern IDEs like VS Code will detect it automatically!\n",
-    "            </div>\n",
     "        </div>\n",
     "        <div class=\"card green\">\n",
     "            <h3>Why we prefer Pip + venv for this course</h3>\n",
