--- a/02 Python Setup/05 Setting Up Your Workspace (venv & Conda).ipynb
+++ b/02 Python Setup/05 Setting Up Your Workspace (venv & Conda).ipynb
@@ -28,7 +28,8 @@
     "    font-family: 'Poppins', sans-serif;\n",
     "    letter-spacing: 1px;\n",
     "  }\n",
-    "\n",
+    "  \n",
+    "  .container > .card:last-child { margin-bottom: 2rem; }\n",
     "  .container {\n",
     "    display: flex;\n",
     "    flex-direction: column;\n",
@@ -51,8 +52,16 @@
     "    box-shadow: 0 10px 20px rgba(0, 0, 0, 0.5);\n",
     "  }\n",
     "\n",
+    "  .card h3 {\n",
+    "    color: #ffffff;\n",
+    "    font-size: 1.3rem;\n",
+    "    margin-bottom: 0.75rem;\n",
+    "    font-weight: bold;\n",
+    "    font-family: 'Segoe UI', sans-serif;\n",
+    "  }\n",
+    "\n",
     "  .image-card img {\n",
-    "    max-width: 100%;\n",
+    "    max-width: 50vw;\n",
     "    height: auto;\n",
     "    display: block;\n",
     "  }\n",
@@ -67,13 +76,13 @@
     "    letter-spacing: 1px;\n",
     "  }\n",
     "\n",
-    "  .card h3 {\n",
-    "    color: #ffffff;\n",
-    "    font-size: 1.3rem;\n",
-    "    margin-bottom: 0.75rem;\n",
-    "    font-weight: bold;\n",
-    "    font-family: 'Segoe UI', sans-serif;\n",
-    "  }\n",
+    "  img { \n",
+    "    display: block; \n",
+    "    margin: 15px auto; \n",
+    "    border-radius: 8px; \n",
+    "    max-width: 50vw; \n",
+    "    height: auto;\n",
+    "     }\n",
     "\n",
     "  p {\n",
     "    color: #dcdcdc;\n",
@@ -131,6 +140,9 @@
     "    border-left-color: #ef5350;\n",
     "  }\n",
     "\n",
+    "  .card.pink {\n",
+    "    border-left-color: #ee716a;\n",
+    "  }\n",
     "  .toc-card ul {\n",
     "    list-style-type: none;\n",
     "    padding-left: 0;\n",
@@ -240,20 +252,10 @@
     "  <div class=\"container\">\n",
     "    <div class=\"card toc-card blue\">\n",
     "      <h3>Contents</h3>\n",
-    "      <h3>Contents</h3>\n",
-    "      <ul>\n",
-    "        <li><a href=\"#toc_venv\" style=\"color: #29b6f6; text-decoration: none;\">1. Option 1: venv (Fast & Built-in)</a></li>\n",
-    "        <li><a href=\"#toc_conda_intro\" style=\"color: #29b6f6; text-decoration: none;\">2. Option 2: Conda (Professional Powerhouse)</a>\n",
-    "          <ul>\n",
-    "            <li><a href=\"#toc1_\">Understanding the Differences: Conda, Miniconda, and Anaconda</a></li>\n",
-    "            <li><a href=\"#toc2_\">Why Prefer Miniconda</a></li>\n",
-    "            <li><a href=\"#toc3_\">Installing Miniconda</a></li>\n",
-    "            <li><a href=\"#toc4_\">Conda Environments</a></li>\n",
-    "            <li><a href=\"#toc5_\">Installing and Managing Packages</a></li>\n",
-    "            <li><a href=\"#toc6_\">Environment Files</a></li>\n",
-    "            <li><a href=\"#toc7_\">Best Practices</a></li>\n",
-    "          </ul>\n",
-    "        </li>\n",
+    "      <ul style=\"list-style: none; padding: 0;\">\n",
+    "        <li><a href=\"#toc_venv\" style=\"color: #29b6f6; text-decoration: none;\">Option 1: venv (Fast & Built-in)</a></li>\n",
+    "        <li><a href=\"#toc_conda\" style=\"color: #29b6f6; text-decoration: none;\">Option 2: Conda (Data Science Standard)</a></li>\n",
+    "        <li><a href=\"#toc_best\" style=\"color: #29b6f6; text-decoration: none;\">Best Practices</a></li>\n",
     "      </ul>\n",
     "    </div>\n",
     "  </div>\n",
@@ -267,163 +269,95 @@
     "      <p><b>venv</b> is the standard Python tool for creating virtual environments. It is pre-installed with Python, making it the fastest way to start a project without needing external software.</p>\n",
     "    </div>\n",
     "    <div class=\"card green\">\n",
-    "      <h3>Setup Instructions</h3>\n",
-    "      <p>Open your terminal/command prompt and follow these steps:</p>\n",
-    "      <pre><code># 1. Create the environment folder named '.venv'\n",
-    "python -m venv .venv\n",
-    "# 2. Activate it (Windows)\n",
-    ".venv\\Scripts\\activate\n",
-    "# 3. Activate it (Mac/Linux)\n",
-    "source .venv/bin/activate</code></pre>\n",
-    "      <div class=\"note\">\n",
-    "        <strong>Pro Tip:</strong> We use <b>.venv</b> (with a dot) so it remains hidden in your file explorer and is automatically ignored by most professional tools.\n",
+    "            <h3>Standard Workflow</h3>\n",
+    "            <p>Follow these steps to create and use an environment in your terminal:</p>\n",
+    "            <ul>\n",
+    "                <li><strong>Create:</strong> <code>python -m venv .venv</code></li>\n",
+    "                <li><strong>Activate (Windows):</strong> <code>.venv\\Scripts\\activate</code></li>\n",
+    "                <li><strong>Activate (Mac/Linux):</strong> <code>source .venv/bin/activate</code></li>\n",
+    "            </ul>\n",
+    "            <div class=\"note\">\n",
+    "                <strong>Pro Tip:</strong> Always name your environment folder <code>.venv</code>. Modern IDEs like VS Code will detect it automatically!\n",
+    "            </div>\n",
+    "        </div>\n",
+    "  </div>\n",
+    "</div>\n",
+    "\n",
+    "<div class=\"section-card\" id=\"toc_conda\">\n",
+    "  <h2>Option 2: The Professional Powerhouse (Conda)</h2>\n",
+    "  <div class=\"container\">\n",
+    "    <!-- Conda vs Anaconda -->\n",
+    "    <div class=\"card orange\">\n",
+    "      <h3>Conda, Miniconda, or Anaconda?</h3>\n",
+    "      <img src=\"../images/conda-anaconda-workbench.png\" alt=\"Differences\">\n",
+    "      <ul>\n",
+    "        <li><b>Conda:</b> The engine (Package & Environment Manager).</li>\n",
+    "        <li><b>Miniconda:</b> Lightweight (Conda + Python only). <strong>Highly Recommended!</strong></li>\n",
+    "        <li><b>Anaconda:</b> Heavy (Conda + 1500+ data science packages).</li>\n",
+    "      </ul>\n",
+    "    </div>\n",
+    "    <div class=\"card green\">\n",
+    "      <h3>Installation (Miniconda)</h3>\n",
+    "      <p>1. Download from <a href=\"https://docs.anaconda.com/miniconda/\" style=\"color: #29b6f6;\">Official Site</a>.</p>\n",
+    "      <p>2. <b>Windows:</b> Run <code>.exe</code> and check \"Add to PATH\" (optional but helpful).</p>\n",
+    "      <p>3. <b>Mac/Linux:</b> Run <code>bash Miniconda3-latest-xxx.sh</code> in terminal.</p>\n",
+    "    </div>\n",
+    "    <div class=\"card pink\">\n",
+    "      <h3>Environment Management Workflow</h3>\n",
+    "      <p>Managing environments allows you to isolate dependencies and maintain project-specific Python versions without conflicts.</p>\n",
+    "      <!-- Step 0: Conceptual Diagram -->\n",
+    "      <img src=\"../images/how-conda-works.png\" style=\"max-width: 65%; margin-bottom: 1.5rem; opacity: 0.9;\" alt=\"Conda Flow\">\n",
+    "      <div style=\"margin-top: 1rem;\">\n",
+    "        <ul style=\"list-style-type: none; padding-left: 0;\">\n",
+    "          <!-- Step 1 -->\n",
+    "          <li style=\"margin-bottom: 1.2rem; border-bottom: 1px solid rgba(255,255,255,0.05); padding-bottom: 0.8rem;\">\n",
+    "            <strong style=\"color: #f06292; font-size: 1rem;\">✨ 1. Creation:</strong> \n",
+    "            Initialize a new isolated workspace with a chosen Python version.\n",
+    "            <pre style=\"margin-top: 8px;\"><code>conda create --name my_env python=3.10</code></pre>\n",
+    "          </li>\n",
+    "          <!-- Step 2 -->\n",
+    "          <li style=\"margin-bottom: 1.2rem; border-bottom: 1px solid rgba(255,255,255,0.05); padding-bottom: 0.8rem;\">\n",
+    "            <strong style=\"color: #f06292; font-size: 1rem;\">🚀 2. Activation:</strong> \n",
+    "            Enter the environment to start using its specific packages.\n",
+    "            <pre style=\"margin-top: 8px;\"><code>conda activate my_env</code></pre>\n",
+    "          </li>\n",
+    "          <!-- Step 3 -->\n",
+    "          <li style=\"margin-bottom: 1.2rem; border-bottom: 1px solid rgba(255,255,255,0.05); padding-bottom: 0.8rem;\">\n",
+    "            <strong style=\"color: #f06292; font-size: 1rem;\">📋 3. Inventory:</strong> \n",
+    "            List all environments available on your system (active one marked with *).\n",
+    "            <pre style=\"margin-top: 8px;\"><code>conda env list</code></pre>\n",
+    "          </li>\n",
+    "          <!-- Step 4 -->\n",
+    "          <li>\n",
+    "            <strong style=\"color: #f06292; font-size: 1rem;\">🧹 4. Cleanup:</strong> \n",
+    "            Remove an environment and all its packages when the project is finished.\n",
+    "            <pre style=\"margin-top: 8px;\"><code>conda env remove -n my_env</code></pre>\n",
+    "          </li>\n",
+    "        </ul>\n",
     "      </div>\n",
     "    </div>\n",
-    "  </div>\n",
-    "</div>\n",
-    "\n",
-    "<!-- Section 1: Understanding the Differences: Conda, Miniconda, and Anaconda -->\n",
-    "<div class=\"section-card\" id=\"toc_conda_intro\">\n",
-    "  <h2>Option 2: The Professional Powerhouse (Conda)</h2>\n",
-    "<div class=\"section-card\" id=\"toc1_\">\n",
-    "  <h2>Understanding the Differences: Conda, Miniconda, and Anaconda</h2>\n",
-    "  <div class=\"container\">\n",
-    "    <div class=\"card image-card orange\">\n",
-    "      <h3>Overview</h3>\n",
-    "      <img src=\"../images/conda-anaconda-workbench.png\" alt=\"Conda Differences\" style=\"max-width: 50vw; height: auto; display: block; margin: 10px auto; border-radius: 5px;\">\n",
-    "    </div>\n",
-    "    <div class=\"card orange\">\n",
-    "      <h3>Conda</h3>\n",
-    "      <p>Conda is the package manager at the core of Miniconda and Anaconda. It installs, updates, and manages packages and dependencies, supporting multiple platforms and languages.</p>\n",
-    "    </div>\n",
-    "    <div class=\"card orange\">\n",
-    "      <h3>Miniconda</h3>\n",
-    "      <p>Miniconda is a minimal version of Anaconda, including only Conda and essential dependencies for a lightweight, customizable installation.</p>\n",
-    "    </div>\n",
-    "    <div class=\"card orange\">\n",
-    "      <h3>Anaconda</h3>\n",
-    "      <p>Anaconda is a distribution including Conda and pre-installed Python packages, data science libraries, and tools, tailored for scientific computing and machine learning.</p>\n",
-    "    </div>\n",
-    "  </div>\n",
-    "</div>\n",
-    "\n",
-    "<!-- Section 2: Why Prefer Miniconda -->\n",
-    "<div class=\"section-card\" id=\"toc2_\">\n",
-    "  <h2>Why Prefer Miniconda</h2>\n",
-    "  <div class=\"container\">\n",
     "    <div class=\"card purple\">\n",
-    "      <h3>Customizability</h3>\n",
-    "      <p>Miniconda’s minimalistic approach allows installing only needed packages, ensuring lightweight and efficient environments.</p>\n",
+    "      <h3>Packages & Exporting</h3>\n",
+    "      <p>Conda handles complex non-Python dependencies better than pip.</p>\n",
+    "      <ul>\n",
+    "        <li><b>Install:</b> <code>conda install numpy</code></li>\n",
+    "        <li><b>Update:</b> <code>conda update --all</code></li>\n",
+    "        <li><b>Export:</b> <code>conda env export > env.yml</code> (Sharing your project)</li>\n",
+    "        <li><b>Import:</b> <code>conda env create -f env.yml</code></li>\n",
+    "      </ul>\n",
     "    </div>\n",
-    "    <div class=\"card purple\">\n",
-    "      <h3>Reduced Disk Space</h3>\n",
-    "      <p>Miniconda consumes less disk space than Anaconda, ideal for systems with limited storage or multiple environments.</p>\n",
-    "    </div>\n",
-    "    <div class=\"card purple\">\n",
-    "      <h3>Faster Installation</h3>\n",
-    "      <p>Miniconda has a smaller download size and faster installation process, convenient for quick setups.</p>\n",
-    "    </div>\n",
-    "  </div>\n",
+    " </div>\n",
     "</div>\n",
-    "\n",
-    "<!-- Section 3: Installing miniconda -->\n",
-    "<div class=\"section-card\" id=\"toc3_\">\n",
-    "  <h2>Installing miniconda</h2>\n",
-    "  <div class=\"container\">\n",
-    "    <div class=\"card image-card green\">\n",
-    "      <h3>Overview</h3>\n",
-    "      <img src=\"../images/miniconda.svg\" alt=\"Miniconda Installation\" style=\"max-width: 30vw; height: auto; display: block; margin: 10px auto; border-radius: 5px;\">\n",
-    "    </div>\n",
-    "    <div class=\"card green\" id=\"toc3_1_\">\n",
-    "      <h3>Windows Installation</h3>\n",
-    "      <p>Download the Miniconda installer from the official website, run it, follow the wizard, and add Miniconda to the PATH during installation.</p>\n",
-    "      <a href=\"https://www.anaconda.com/download/success\">installing miniconda</a>\n",
-    "    </div>\n",
-    "    <div class=\"card green\" id=\"toc3_2_\">\n",
-    "      <h3>Linux and WSL Installation</h3>\n",
-    "      <p>Download the installer script, run <code>bash Miniconda3-latest-Linux-x86_64.sh</code>, follow prompts, and add to PATH by restarting the terminal.</p>\n",
-    "    </div>\n",
-    "    <div class=\"card green\" id=\"toc3_3_\">\n",
-    "      <h3>macOS Installation</h3>\n",
-    "      <p>Download the installer script, run <code>bash Miniconda3-latest-MacOSX-x86_64.sh</code>, follow prompts, and add to PATH by restarting the terminal.</p>\n",
-    "    </div>\n",
-    "  </div>\n",
-    "</div>\n",
-    "\n",
-    "<!-- Section 4: Conda Environments -->\n",
-    "<div class=\"section-card\" id=\"toc4_\">\n",
-    "  <h2>Conda Environments</h2>\n",
-    "  <div class=\"container\">\n",
-    "    <div class=\"card image-card pink\">\n",
-    "      <h3>Overview</h3>\n",
-    "      <img src=\"../images/how-conda-works.png\" alt=\"How Conda Works\" style=\"max-width: 50vw; height: auto; display: block; margin: 10px auto; border-radius: 5px;\">\n",
-    "    </div>\n",
-    "    <div class=\"card pink\" id=\"toc4_1_\">\n",
-    "      <h3>Creating a New Environment</h3>\n",
-    "      <p>Use <code>conda create -n my_env python=3.8</code> to create an environment with a specific Python version.</p>\n",
-    "    </div>\n",
-    "    <div class=\"card pink\" id=\"toc4_2_\">\n",
-    "      <h3>Activating and Deactivating Environments</h3>\n",
-    "      <p>Use <code>conda activate my_env</code> to activate and <code>conda deactivate</code> to deactivate an environment.</p>\n",
-    "      <img src=\"../images/conda-activate.jpeg\" alt=\"Conda Activate\" style=\"max-width: 50vw; height: auto; display: block; margin: 10px auto; border-radius: 5px;\">\n",
-    "    </div>\n",
-    "    <div class=\"card pink\" id=\"toc4_3_\">\n",
-    "      <h3>Listing Environments and Packages</h3>\n",
-    "      <p>Use <code>conda env list</code> for environments and <code>conda list</code> for packages in the active environment.</p>\n",
-    "    </div>\n",
-    "    <div class=\"card pink\" id=\"toc4_4_\">\n",
-    "      <h3>Removing Environments</h3>\n",
-    "      <p>Use <code>conda env remove -n my_env</code> to remove an environment.</p>\n",
-    "    </div>\n",
-    "  </div>\n",
-    "</div>\n",
-    "<!-- Section 5: Installing and Managing Packages -->\n",
-    "<div class=\"section-card\" id=\"toc5_\">\n",
-    "  <h2>Installing and Managing Packages</h2>\n",
-    "  <div class=\"container\">\n",
-    "    <div class=\"card orange\" id=\"toc5_1_\">\n",
-    "      <h3>Installing Packages</h3>\n",
-    "      <p>Use <code>conda install PACKAGE_NAME</code> or <code>conda install PACKAGE_NAME=VERSION</code> to install packages or specific versions.</p>\n",
-    "    </div>\n",
-    "    <div class=\"card orange\" id=\"toc5_1_1_\">\n",
-    "      <h3>Installing Packages with pip</h3>\n",
-    "      <p>Use <code>pip install PACKAGE_NAME</code> for packages not available through Conda, though Conda is preferred for dependencies.</p>\n",
-    "    </div>\n",
-    "    <div class=\"card orange\" id=\"toc5_2_\">\n",
-    "      <h3>Updating Packages</h3>\n",
-    "      <p>Use <code>conda update PACKAGE_NAME</code> for a package or <code>conda update --all</code> for all packages.</p>\n",
-    "    </div>\n",
-    "    <div class=\"card orange\" id=\"toc5_3_\">\n",
-    "      <h3>Removing Packages</h3>\n",
-    "      <p>Use <code>conda remove PACKAGE_NAME</code> to remove a package.</p>\n",
-    "    </div>\n",
-    "  </div>\n",
-    "</div>\n",
-    "\n",
-    "<!-- Section 6: Environment Files -->\n",
-    "<div class=\"section-card\" id=\"toc6_\">\n",
-    "  <h2>Environment Files</h2>\n",
-    "  <div class=\"container\">\n",
-    "    <div class=\"card red\" id=\"toc6_1_\">\n",
-    "      <h3>Exporting an Environment</h3>\n",
-    "      <p>Use <code>conda env export > environment.yml</code> to export the environment configuration.</p>\n",
-    "    </div>\n",
-    "    <div class=\"card red\" id=\"toc6_2_\">\n",
-    "      <h3>Creating an Environment from a File</h3>\n",
-    "      <p>Use <code>conda env create -f environment.yml</code> to create an environment from a file.</p>\n",
-    "    </div>\n",
-    "  </div>\n",
-    "</div>\n",
-    "\n",
-    "<!-- Section 7: Best Practices -->\n",
-    "<div class=\"section-card\" id=\"toc7_\">\n",
+    "  \n",
+    "<!-- SECTION 3: BEST PRACTICES -->\n",
+    "<div class=\"section-card\" id=\"toc_best\">\n",
     "  <h2>Best Practices</h2>\n",
     "  <div class=\"container\">\n",
     "    <div class=\"card blue\">\n",
     "      <ul>\n",
-    "        <li><b>Isolation:</b> Create a new environment for <i>every</i> new project.</li>\n",
-    "        <li><b>Cleanliness:</b> Never install packages globally on your computer.</li>\n",
-    "        <li><b>Mirrors:</b> Use local mirrors for <code>pip</code> to ensure high-speed downloads in Iran.</li>\n",
+    "        <li>🛡️ <b>Isolation:</b> One environment per project. No exceptions.</li>\n",
+    "        <li>🧹 <b>Cleanliness:</b> Never install packages \"globally\".</li>\n",
+    "        <li>🚀 <b>Speed:</b> If in Iran, use <code>shecan.ir</code> or local mirrors for faster downloads.</li>\n",
     "      </ul>\n",
     "    </div>\n",
     "  </div>\n",
