--- a/02 Python Setup/05 Setting Up Your Workspace (venv & Conda).ipynb
+++ b/02 Python Setup/05 Setting Up Your Workspace (venv & Conda).ipynb
@@ -28,7 +28,7 @@
     "    font-family: 'Poppins', sans-serif;\n",
     "    letter-spacing: 1px;\n",
     "  }\n",
-    "  \n",
+    "\n",
     "  .container > .card:last-child { margin-bottom: 2rem; }\n",
     "  .container {\n",
     "    display: flex;\n",
@@ -255,14 +255,14 @@
     "      <ul style=\"list-style: none; padding: 0;\">\n",
     "        <li><a href=\"#toc_venv\" style=\"color: #29b6f6; text-decoration: none;\">Option 1: venv (Fast & Built-in)</a></li>\n",
     "        <li><a href=\"#toc_conda\" style=\"color: #29b6f6; text-decoration: none;\">Option 2: Conda (Data Science Standard)</a></li>\n",
-    "        <li><a href=\"#toc_best\" style=\"color: #29b6f6; text-decoration: none;\">Best Practices</a></li>\n",
+    "        <li><a href=\"#toc_best\" style=\"color: #29b6f6; text-decoration: none;\">Best Practices & Iranian Developer Tips</a></li>\n",
     "      </ul>\n",
     "    </div>\n",
     "  </div>\n",
     "</div>\n",
     "\n",
     "<div class=\"section-card\" id=\"toc_venv\">\n",
-    "  <h2>Option 1: The Fast & Lightweight Way (venv)</h2>\n",
+    "  <h2>Option 1: venv (Fast & Built-in)</h2>\n",
     "  <div class=\"container\">\n",
     "    <div class=\"card green\">\n",
     "      <h3>What is venv?</h3>\n",
@@ -284,7 +284,7 @@
     "</div>\n",
     "\n",
     "<div class=\"section-card\" id=\"toc_conda\">\n",
-    "  <h2>Option 2: The Professional Powerhouse (Conda)</h2>\n",
+    "  <h2>Option 2: Conda (Data Science Standard)</h2>\n",
     "  <div class=\"container\">\n",
     "    <!-- Conda vs Anaconda -->\n",
     "    <div class=\"card orange\">\n",
@@ -298,7 +298,7 @@
     "    </div>\n",
     "    <div class=\"card green\">\n",
     "      <h3>Installation (Miniconda)</h3>\n",
-    "      <p>1. Download from <a href=\"https://docs.anaconda.com/miniconda/\" style=\"color: #29b6f6;\">Official Site</a>.</p>\n",
+    "      <p>1. Download from <a href=\"https://www.anaconda.com/download/success\" style=\"color: #29b6f6;\">Official Site</a>.</p>\n",
     "      <p>2. <b>Windows:</b> Run <code>.exe</code> and check \"Add to PATH\" (optional but helpful).</p>\n",
     "      <p>3. <b>Mac/Linux:</b> Run <code>bash Miniconda3-latest-xxx.sh</code> in terminal.</p>\n",
     "    </div>\n",
@@ -351,14 +351,43 @@
     "  \n",
     "<!-- SECTION 3: BEST PRACTICES -->\n",
     "<div class=\"section-card\" id=\"toc_best\">\n",
-    "  <h2>Best Practices</h2>\n",
+    "  <h2>Best Practices & Iranian Developer Tips</h2>\n",
     "  <div class=\"container\">\n",
+    "    <!-- Professional Workflow -->\n",
     "    <div class=\"card blue\">\n",
+    "      <h3>1. Professional Workflow</h3>\n",
     "      <ul>\n",
-    "        <li>🛡️ <b>Isolation:</b> One environment per project. No exceptions.</li>\n",
-    "        <li>🧹 <b>Cleanliness:</b> Never install packages \"globally\".</li>\n",
-    "        <li>🚀 <b>Speed:</b> If in Iran, use <code>shecan.ir</code> or local mirrors for faster downloads.</li>\n",
+    "        <li>🛡️ <b>Isolation:</b> Create a unique environment for <i>every</i> new project. Never mix AI projects with Web projects.</li>\n",
+    "        <li>🧹 <b>Cleanliness:</b> Never install packages \"globally\". Keep your base Python installation clean.</li>\n",
+    "        <li>📜 <b>Documentation:</b> Always export your environment (<code>requirements.txt</code> or <code>env.yml</code>) so others can run your code.</li>\n",
     "      </ul>\n",
+    "    </div>\n",
+    "    <!-- DNS & Sanctions -->\n",
+    "    <div class=\"card green\">\n",
+    "      <h3>2. Bypassing Sanctions (DNS & Mirrors)</h3>\n",
+    "      <p>Iranian developers often face 403 errors when downloading libraries like <i>PyTorch</i> or <i>TensorFlow</i>. Use these trusted services to fix the issue:</p>\n",
+    "      <div style=\"display: grid; grid-template-columns: 1fr 1fr; gap: 1.5rem; margin-top: 1rem;\">\n",
+    "        <!-- Column 1: Public IPs -->\n",
+    "        <div>\n",
+    "          <p><strong>Standard DNS (Set on OS):</strong></p>\n",
+    "          <ul style=\"list-style-type: none; padding-left: 0;\">\n",
+    "            <li style=\"margin-bottom: 10px;\">🔹 <a href=\"https://shecan.ir/\" target=\"_blank\" style=\"color: #66bb6a;\">Shecan</a></li>\n",
+    "            <li style=\"margin-bottom: 10px;\">🔹 <a href=\"https://begzar.ir/\" target=\"_blank\" style=\"color: #66bb6a;\">Begzar</a></li>\n",
+    "          </ul>\n",
+    "        </div>\n",
+    "        <!-- Column 2: App/Service Based -->\n",
+    "        <div>\n",
+    "          <p><strong>Alternative Services:</strong></p>\n",
+    "          <ul style=\"list-style-type: none; padding-left: 0;\">\n",
+    "            <li style=\"margin-bottom: 10px;\">🔸 <a href=\"https://electrotm.org/\" target=\"_blank\" style=\"color: #66bb6a;\">Electro</a></li>\n",
+    "            <li style=\"margin-bottom: 10px;\">🔸 <a href=\"https://beshkanapp.ir/\" target=\"_blank\" style=\"color: #66bb6a;\">Beshkan</a></li>\n",
+    "          </ul>\n",
+    "        </div>\n",
+    "      </div>\n",
+    "      <div class=\"note\" style=\"margin-top: 1rem; background: rgba(102, 187, 106, 0.1); color: #dcdcdc; border: 1px solid #66bb6a;\">\n",
+    "        <strong>Quick Fix:</strong> If <code>pip install</code> is slow, use an Iranian mirror: <br>\n",
+    "        <code>pip install PACKAGE_NAME -i https://mirror-pypi.runflare.com/simple</code>\n",
+    "      </div>\n",
     "    </div>\n",
     "  </div>\n",
     "</div>"
