--- a/02 Python Setup/02 Installing VSCode and python.ipynb
+++ b/02 Python Setup/02 Installing VSCode and python.ipynb
@@ -71,7 +71,7 @@
     "</style>\n",
     "\n",
     "<div class=\"section-card\">\n",
-    "  <h1>Environment Setup: Python & VS Code 🐍</h1>\n",
+    "  <h1>Installing VSCode and python</h1>\n",
     "</div>\n",
     "\n",
     "<!-- Table of Contents -->\n",
