--- a/02 Python Setup/06 Using Environments in VS Code.ipynb
+++ b/02 Python Setup/06 Using Environments in VS Code.ipynb
@@ -2,218 +2,77 @@
  "cells": [
   {
    "cell_type": "markdown",
-   "id": "f5a5e46d",
+   "id": "1cc4b687",
    "metadata": {},
    "source": [
     "<style>\n",
-    "  * {\n",
-    "    box-sizing: border-box;\n",
-    "  }\n",
+    "  /* Global Settings */\n",
+    "  * { box-sizing: border-box; }\n",
     "\n",
+    "  /* Section Card Style */\n",
     "  .section-card {\n",
     "    background: linear-gradient(145deg, rgb(61, 61, 87), rgb(49, 49, 70));\n",
-    "    border-radius: 15px;\n",
-    "    padding: 2rem;\n",
-    "    margin-bottom: 2.5rem;\n",
-    "    box-shadow: 0 8px 20px rgba(0, 0, 0, 0.5);\n",
-    "    width: 100%;\n",
-    "    max-width: min(1200px, 95vw);\n",
-    "    margin: 0 auto 2.5rem;\n",
+    "    border-radius: 15px; padding: 2rem; margin: 0 auto 2.5rem;\n",
+    "    box-shadow: 0 8px 20px rgba(0, 0, 0, 0.5); width: 100%; max-width: min(1200px, 95vw);\n",
     "  }\n",
     "\n",
-    "  .section-card h2 {\n",
-    "    text-align: center;\n",
-    "    color: #ffffff;\n",
-    "    font-size: 1.8rem;\n",
-    "    margin-bottom: 1.5rem;\n",
-    "    font-family: 'Poppins', sans-serif;\n",
-    "    letter-spacing: 1px;\n",
-    "  }\n",
-    "  .container > .card:last-child { margin-bottom: 2rem; }\n",
-    "  .container {\n",
-    "    display: flex;\n",
-    "    flex-direction: column;\n",
-    "    gap: 1.25rem;\n",
-    "  }\n",
-    "\n",
+    "  /* Typography */\n",
+    "  h1 { text-align: center; color: #ffffff; font-size: 2.5rem; margin-bottom: 1.5rem; font-family: 'Poppins', sans-serif; letter-spacing: 1px; }\n",
+    "  .section-card h2 { text-align: center; color: #ffffff; font-size: 1.8rem; margin-bottom: 1.5rem; font-family: 'Poppins', sans-serif; letter-spacing: 1px; }\n",
+    "  .card h3 { color: #ffffff; font-size: 1.3rem; margin-bottom: 0.75rem; font-weight: bold; font-family: 'Segoe UI', sans-serif; }\n",
+    "  \n",
+    "  p, li { color: #dcdcdc; font-size: 0.95rem; line-height: 1.6; font-family: 'Segoe UI', sans-serif; margin-bottom: 0.5rem; }\n",
+    "  ul { padding-left: 1.25rem; margin-bottom: 0.75rem; }\n",
+    "  code { background: rgba(0,0,0,0.3); padding: 2px 6px; border-radius: 4px; color: #ffab40; font-family: monospace; font-size: 0.9rem; }\n",
+    "  \n",
+    "  /* Inner Cards */\n",
+    "  .container { display: flex; flex-direction: column; gap: 1.25rem; }\n",
     "  .card {\n",
     "    background: linear-gradient(145deg, #24243e, #1e1e3a);\n",
-    "    border-radius: 12px;\n",
-    "    padding: 1.5rem;\n",
-    "    box-shadow: 0 6px 16px rgba(0, 0, 0, 0.4);\n",
-    "    transition: transform 0.3s ease, box-shadow 0.3s ease;\n",
+    "    border-radius: 12px; padding: 1.5rem; margin: 0 auto; width: min(1000px, 90vw);\n",
+    "    box-shadow: 0 6px 16px rgba(0, 0, 0, 0.4); transition: transform 0.3s ease, box-shadow 0.3s ease;\n",
     "    border-left: 4px solid transparent;\n",
-    "    width: min(1000px, 90vw);\n",
-    "    margin: 0 auto;\n",
     "  }\n",
+    "  .card:hover { transform: translateY(-5px); box-shadow: 0 10px 20px rgba(0, 0, 0, 0.5); }\n",
+    "  \n",
+    "  /* Images */\n",
+    "  img { display: block; max-width: 100%; height: auto; margin: 15px auto; border-radius: 6px; border: 1px solid rgba(255,255,255,0.1); }\n",
+    "  \n",
+    "  /* Grid for Image Galleries */\n",
+    "  .image-grid { display: grid; grid-template-columns: 1fr 1fr; gap: 1rem; margin-top: 15px; }\n",
     "\n",
-    "  .card:hover {\n",
-    "    transform: translateY(-6px);\n",
-    "    box-shadow: 0 10px 20px rgba(0, 0, 0, 0.5);\n",
-    "  }\n",
-    "\n",
-    "  .image-card img {\n",
-    "    max-width: 100%;\n",
-    "    height: auto;\n",
-    "    display: block;\n",
-    "  }\n",
-    "\n",
-    "  h1 {\n",
-    "    width: 100%;\n",
-    "    text-align: center;\n",
-    "    color: #ffffff;\n",
-    "    font-size: 2.8rem;\n",
-    "    margin-bottom: 1.5rem;\n",
-    "    font-family: 'Poppins', sans-serif;\n",
-    "    letter-spacing: 1px;\n",
-    "  }\n",
-    "\n",
-    "  .card h3 {\n",
-    "    color: #ffffff;\n",
-    "    font-size: 1.3rem;\n",
-    "    margin-bottom: 0.75rem;\n",
-    "    font-weight: bold;\n",
-    "    font-family: 'Segoe UI', sans-serif;\n",
-    "  }\n",
-    "\n",
-    "  p {\n",
-    "    color: #dcdcdc;\n",
-    "    font-size: 0.95rem;\n",
-    "    line-height: 1.5;\n",
-    "    font-family: 'Segoe UI', sans-serif;\n",
-    "    margin-bottom: 0.75rem;\n",
-    "  }\n",
-    "\n",
-    "  ul {\n",
-    "    padding-left: 1.25rem;\n",
-    "    margin-bottom: 0.75rem;\n",
-    "  }\n",
-    "\n",
-    "  li {\n",
-    "    margin-bottom: 0.5rem;\n",
-    "    color: #dcdcdc;\n",
-    "    font-size: 0.95rem;\n",
-    "    line-height: 1.5;\n",
-    "    font-family: 'Segoe UI', sans-serif;\n",
-    "  }\n",
-    "\n",
+    "  /* Alert Notes */\n",
     "  .note {\n",
-    "    background-color: #fdd835;\n",
-    "    color: #000;\n",
-    "    padding: 1rem;\n",
-    "    border-radius: 6px;\n",
-    "    margin-top: 1.25rem;\n",
-    "    font-style: italic;\n",
-    "    font-size: 0.95rem;\n",
-    "    font-family: 'Segoe UI', sans-serif;\n",
-    "    width: min(1000px, 90vw);\n",
-    "    margin: 1.25rem auto 0;\n",
+    "    background-color: #fdd835; color: #000; padding: 1rem; border-radius: 6px;\n",
+    "    margin: 1.25rem auto 0; font-style: italic; width: 100%; font-size: 0.95rem;\n",
     "  }\n",
     "\n",
-    "  .card.green {\n",
-    "    border-left-color: #66bb6a;\n",
-    "  }\n",
+    "  /* Table of Contents (TOC) */\n",
+    "  .toc-card ul { list-style-type: none; padding-left: 0; }\n",
+    "  .toc-card ul li a { color: #29b6f6; text-decoration: none; transition: color 0.3s ease; }\n",
+    "  .toc-card ul li a:hover { color: #66bb6a; text-decoration: underline; }\n",
     "\n",
-    "  .card.blue {\n",
-    "    border-left-color: #29b6f6;\n",
-    "  }\n",
+    "  /* Accent Colors */\n",
+    "  .blue { border-left-color: #29b6f6; }\n",
+    "  .green { border-left-color: #66bb6a; }\n",
+    "  .orange { border-left-color: #ffa726; }\n",
+    "  .purple { border-left-color: #ba68c8; }\n",
+    "  .red { border-left-color: #ef5350; }\n",
+    "  .pink { border-left-color: #f06292; }\n",
     "\n",
-    "  .card.orange {\n",
-    "    border-left-color: #ffa726;\n",
-    "  }\n",
-    "\n",
-    "  .card.purple {\n",
-    "    border-left-color: #ba68c8;\n",
-    "  }\n",
-    "\n",
-    "  .card.red {\n",
-    "    border-left-color: #ef5350;\n",
-    "  }\n",
-    "  .card.pink {\n",
-    "    border-left-color:rgb(247, 100, 208);\n",
-    "  }\n",
-    "\n",
-    "  .toc-card ul {\n",
-    "    list-style-type: none;\n",
-    "    padding-left: 0;\n",
-    "  }\n",
-    "\n",
-    "  .toc-card ul li {\n",
-    "    margin-bottom: 0.5rem;\n",
-    "  }\n",
-    "\n",
-    "  .toc-card ul li a {\n",
-    "    color: #29b6f6;\n",
-    "    text-decoration: none;\n",
-    "    transition: color 0.3s ease;\n",
-    "  }\n",
-    "\n",
-    "  .toc-card ul li a:hover {\n",
-    "    color: #66bb6a;\n",
-    "    text-decoration: underline;\n",
-    "  }\n",
-    "\n",
-    "  .toc-card ul ul {\n",
-    "    padding-left: 1.5rem;\n",
-    "  }\n",
-    "\n",
+    "  /* Responsive Design */\n",
     "  @media (max-width: 768px) {\n",
-    "    .section-card {\n",
-    "      padding: 1.25rem;\n",
-    "      max-width: 95vw;\n",
-    "    }\n",
-    "\n",
-    "    .card {\n",
-    "      width: 100%;\n",
-    "      padding: 1rem;\n",
-    "    }\n",
-    "\n",
-    "    .note {\n",
-    "      width: 100%;\n",
-    "    }\n",
-    "\n",
-    "    h1 {\n",
-    "      font-size: 2rem;\n",
-    "    }\n",
-    "\n",
-    "    .section-card h2 {\n",
-    "      font-size: 1.4rem;\n",
-    "    }\n",
-    "\n",
-    "    .card h3 {\n",
-    "      font-size: 1.2rem;\n",
-    "    }\n",
-    "\n",
-    "    p, li {\n",
-    "      font-size: 0.9rem;\n",
-    "    }\n",
-    "  }\n",
-    "\n",
-    "  @media (max-width: 480px) {\n",
-    "    h1 {\n",
-    "      font-size: 1.8rem;\n",
-    "    }\n",
-    "\n",
-    "    .section-card h2 {\n",
-    "      font-size: 1.2rem;\n",
-    "    }\n",
-    "\n",
-    "    .card {\n",
-    "      padding: 0.75rem;\n",
-    "    }\n",
-    "\n",
-    "    .note {\n",
-    "      padding: 0.75rem;\n",
-    "    }\n",
-    "\n",
-    "    p, li {\n",
-    "      font-size: 0.85rem;\n",
-    "    }\n",
+    "    .section-card { padding: 1.25rem; max-width: 95vw; }\n",
+    "    .card { width: 100%; padding: 1rem; }\n",
+    "    h1 { font-size: 2rem; }\n",
+    "    .section-card h2 { font-size: 1.4rem; }\n",
+    "    .card h3 { font-size: 1.2rem; }\n",
+    "    .image-grid { grid-template-columns: 1fr; }\n",
     "  }\n",
     "</style>\n",
     "\n",
     "<div class=\"section-card\">\n",
-    "<h1>Using Environments in VS Code</h1>\n",
+    "  <h1>Using Environments in VS Code</h1>\n",
     "</div>\n",
     "\n",
     "<!-- Table of Contents -->\n",
@@ -221,86 +80,108 @@
     "  <h2>Table of Contents</h2>\n",
     "  <div class=\"container\">\n",
     "    <div class=\"card toc-card blue\">\n",
-    "      <h3>Contents</h3>\n",
+    "      <h3>Content</h3>\n",
     "      <ul>\n",
-    "        <li><a href=\"#toc1_\">Installing the VS Code Extension</a></li>\n",
-    "        <li><a href=\"#toc2_\">Selecting a Environment in VS Code</a></li>\n",
-    "        <li><a href=\"#toc3_\">Activating a Environment in the Integrated Terminal</a></li>\n",
-    "        <li><a href=\"#toc4_\">Using Jupyter Lab in VS Code</a></li>\n",
+    "        <li><a href=\"#toc1_\">Selecting the Python Interpreter (venv & Conda)</a></li>\n",
+    "        <li><a href=\"#toc2_\">Auto-Activating in the Integrated Terminal</a></li>\n",
+    "        <li><a href=\"#toc3_\">Using Jupyter Notebooks in VS Code</a></li>\n",
     "      </ul>\n",
     "    </div>\n",
     "  </div>\n",
     "</div>\n",
     "\n",
-    "<!-- Section 1: Installing the VS Code Extension -->\n",
+    "<!-- Section 1: Selecting the Interpreter -->\n",
     "<div class=\"section-card\" id=\"toc1_\">\n",
-    "  <h2>Installing the VS Code Extension</h2>\n",
+    "  <h2>1. Selecting the Python Interpreter</h2>\n",
     "  <div class=\"container\">\n",
-    "    <div class=\"card image-card orange\">\n",
-    "      <h3>Overview</h3>\n",
-    "      <img src=\"../images/vscode-python-ext.png\" alt=\"Python Extension\" style=\"max-width: 50vw; height: auto; display: block; margin: 10px auto; border-radius: 5px;\">\n",
-    "    </div>\n",
-    "    <div class=\"card orange\">\n",
-    "      <h3>Steps</h3>\n",
+    "    <div class=\"card purple\">\n",
+    "      <h3>Why do this?</h3>\n",
+    "      <p>VS Code needs to know which Python engine (and which installed packages) to use for your project. This enables correct auto-completion, linting, and execution.</p>\n",
+    "      <h3 style=\"margin-top: 15px;\">Steps (Works for both venv & Conda):</h3>\n",
     "      <ul>\n",
-    "        <li>Launch VS Code.</li>\n",
-    "        <li>Go to Extensions view (<code>Ctrl+Shift+X</code>).</li>\n",
-    "        <li>Search for \"Python\" and install the Microsoft Python extension.</li>\n",
+    "        <li>Open your project folder in VS Code.</li>\n",
+    "        <li>Press <code>Ctrl + Shift + P</code> (Windows/Linux) or <code>Cmd + Shift + P</code> (Mac) to open the Command Palette.</li>\n",
+    "        <li>Type <strong>Python: Select Interpreter</strong> and hit Enter.</li>\n",
+    "        <li><strong>For venv:</strong> Look for the path ending in <code>.venv/Scripts/python.exe</code></li>\n",
+    "        <li><strong>For Conda:</strong> Look for your environment's name (e.g., <code>my_env</code>) marked with \"conda\".</li>\n",
     "      </ul>\n",
+    "      <div class=\"image-grid\">\n",
+    "        <div>\n",
+    "            <p style=\"text-align: center; color: #aaa; font-size: 0.85rem;\">Step 1: Open Command Palette</p>\n",
+    "            <img src=\"../images/1-show-python-interpreter-list.png\" alt=\"Command Palette\">\n",
+    "        </div>\n",
+    "        <div>\n",
+    "            <p style=\"text-align: center; color: #aaa; font-size: 0.85rem;\">Step 2: Select your environment</p>\n",
+    "            <img src=\"../images/2-select-python-interpreter.png\" alt=\"Select Interpreter\">\n",
+    "        </div>\n",
+    "      </div>\n",
+    "      <div class=\"note\">\n",
+    "        <strong>Pro Tip:</strong> You can also just click the Python version number at the very bottom-right corner of the VS Code status bar to quickly open this menu!\n",
+    "      </div>\n",
     "    </div>\n",
     "  </div>\n",
     "</div>\n",
     "\n",
-    "<!-- Section 2: Selecting a Conda Environment in VS Code -->\n",
+    "<!-- Section 2: Terminal Activation -->\n",
     "<div class=\"section-card\" id=\"toc2_\">\n",
-    "  <h2>Selecting a Environment in VS Code</h2>\n",
-    "  <div class=\"container\">\n",
-    "    <div class=\"card purple\">\n",
-    "      <h3>Interpreters</h3>\n",
-    "      <p>Global interpreters are system-wide; Conda interpreters are isolated for project-specific dependencies.</p>\n",
-    "    </div>\n",
-    "    <div class=\"card purple\">\n",
-    "      <h3>Steps</h3>\n",
-    "      <ul>\n",
-    "        <li>Open your python project in VS Code.</li>\n",
-    "        <li>Click the Python interpreter version in the bottom right.</li>\n",
-    "        <li>Select an interpreter or enter a path (e.g., <code>/home/&lt;username&gt;/anaconda3/bin/python</code>).</li>\n",
-    "        <li>Choose a Conda environment from the <code>envs</code> directory.</li>\n",
-    "      </ul>\n",
-    "      <img src=\"../images/1-show-python-interpreter-list.png\" alt=\"Show Python Interpreter List\" style=\"max-width: 50vw; height: auto; display: block; margin: 30px auto; border-radius: 5px;\">\n",
-    "      <img src=\"../images/2-select-python-interpreter.png\" alt=\"Select Python Interpreter\" style=\"max-width: 50vw; height: auto; display: block; margin: 30px auto; border-radius: 5px;\">\n",
-    "    </div>\n",
-    "  </div>\n",
-    "</div>\n",
-    "\n",
-    "<!-- Section 3: Activating a Conda Environment in the Integrated Terminal -->\n",
-    "<div class=\"section-card\" id=\"toc3_\">\n",
-    "  <h2>Activating a Environment in the Integrated Terminal</h2>\n",
+    "  <h2>2. The Integrated Terminal</h2>\n",
     "  <div class=\"container\">\n",
     "    <div class=\"card red\">\n",
-    "      <h3>Steps</h3>\n",
-    "      <p>Open the terminal (<code>Ctrl+`</code>) and use <code>conda activate myenv</code> to activate the environment, shown in the prompt (e.g., <code>(myenv) user@machine:~$</code>).</p>\n",
-    "      <img src=\"../images/vscode-terminal-env.png\" alt=\"Terminal Environment\" style=\"max-width: 50vw; height: auto; display: block; margin: 30px auto; border-radius: 5px;\">\n",
+    "      <h3>Auto-Activation Magic</h3>\n",
+    "      <p>Once you select your interpreter (Step 1), VS Code becomes smart. When you open a new integrated terminal (<code>Ctrl + `</code>), VS Code will automatically activate your environment!</p>\n",
+    "      <h3 style=\"margin-top: 15px;\">Manual Activation (If Auto fails):</h3>\n",
+    "      <p>If you don't see the environment name in parentheses `(my_env)` or `(.venv)`, you can activate it manually:</p>\n",
+    "      <ul>\n",
+    "        <li><strong>venv (Windows):</strong> <code>.venv\\Scripts\\activate</code></li>\n",
+    "        <li><strong>venv (Mac/Linux):</strong> <code>source .venv/bin/activate</code></li>\n",
+    "        <li><strong>Conda:</strong> <code>conda activate my_env</code></li>\n",
+    "      </ul>\n",
+    "      <div class=\"image-grid\">\n",
+    "        <div>\n",
+    "            <p style=\"text-align: center; color: #aaa; font-size: 0.85rem;\">activate venv manually</p>\n",
+    "            <img src=\"../images/vscode-terminal-env-venv.png\" alt=\"Select Kernel\">\n",
+    "        </div>\n",
+    "        <div>\n",
+    "            <p style=\"text-align: center; color: #aaa; font-size: 0.85rem;\">activate conda manually</p>\n",
+    "            <img src=\"../images/vscode-terminal-env-conda.png\" alt=\"Select Environment\">\n",
+    "        </div>\n",
+    "      </div>\n",
     "    </div>\n",
     "  </div>\n",
     "</div>\n",
     "\n",
-    "<!-- Section 4: Using Jupyter Lab in VS Code -->\n",
-    "<div class=\"section-card\" id=\"toc4_\">\n",
-    "  <h2>Using Jupyter Lab in VS Code</h2>\n",
+    "<!-- Section 3: Jupyter in VS Code -->\n",
+    "<div class=\"section-card\" id=\"toc3_\">\n",
+    "  <h2>3. Using Jupyter Notebooks</h2>\n",
     "  <div class=\"container\">\n",
     "    <div class=\"card green\">\n",
-    "      <h3>Steps</h3>\n",
+    "      <h3>Connecting Environments to Notebooks</h3>\n",
+    "      <p>Jupyter Notebooks (<code>.ipynb</code>) use \"Kernels\" to run code. A Kernel is simply your Python environment (venv or Conda).</p>\n",
     "      <ul>\n",
-    "        <li>Open VS Code and use Command Palette (<code>Ctrl+Shift+P</code>).</li>\n",
-    "        <li>Type \"Python: Create Blank Jupyter Notebook\" or create a <code>.ipynb</code> file.</li>\n",
-    "        <li>Select the Conda environment as the kernel from the top right.</li>\n",
-    "        <li>Write and execute Python code or Markdown in the notebook.</li>\n",
+    "        <li>Create a new file and name it something like <code>lesson_1.ipynb</code>.</li>\n",
+    "        <li>Open the file. In the top-right corner, click on <strong>Select Kernel</strong>.</li>\n",
+    "        <li>Choose <strong>Python Environments</strong>.</li>\n",
+    "        <li>Select the exact <code>.venv</code> or Conda environment you created for this project.</li>\n",
     "      </ul>\n",
-    "      <img src=\"../images/1-vscode-jupyter-select-kernel.png\" alt=\"Select Kernel\" style=\"max-width: 50vw; height: auto; display: block; margin: 30px auto; border-radius: 5px;\">\n",
-    "      <img src=\"../images/2-vscode-jupyter-select-env.png\" alt=\"Select Environment\" style=\"max-width: 50vw; height: auto; display: block; margin: 30px auto; border-radius: 5px;\">\n",
-    "      <img src=\"../images/3-vscode-jupyter-env-list.png\" alt=\"Environment List\" style=\"max-width: 50vw; height: auto; display: block; margin: 30px auto; border-radius: 5px;\">\n",
-    "      <img src=\"../images/4-vscode-jupyter-run-code.png\" alt=\"Run Code\" style=\"max-width: 50vw; height: auto; display: block; margin: 30px auto; border-radius: 5px;\">\n",
+    "      <!-- 2x2 Grid for Jupyter Images -->\n",
+    "      <div class=\"image-grid\">\n",
+    "        <div>\n",
+    "            <p style=\"text-align: center; color: #aaa; font-size: 0.85rem;\">1. Click \"Select Kernel\" (Top Right)</p>\n",
+    "            <img src=\"../images/1-vscode-jupyter-select-kernel.png\" alt=\"Select Kernel\">\n",
+    "        </div>\n",
+    "        <div>\n",
+    "            <p style=\"text-align: center; color: #aaa; font-size: 0.85rem;\">2. Click \"Python Environments\"</p>\n",
+    "            <img src=\"../images/2-vscode-jupyter-select-env.png\" alt=\"Select Environment\">\n",
+    "        </div>\n",
+    "        <div>\n",
+    "            <p style=\"text-align: center; color: #aaa; font-size: 0.85rem;\">3. Choose your venv / conda env</p>\n",
+    "            <img src=\"../images/3-vscode-jupyter-env-list.png\" alt=\"Environment List\">\n",
+    "        </div>\n",
+    "        <div>\n",
+    "            <p style=\"text-align: center; color: #aaa; font-size: 0.85rem;\">4. Run the cell!</p>\n",
+    "            <img src=\"../images/4-vscode-jupyter-run-code.png\" alt=\"Run Code\">\n",
+    "        </div>\n",
+    "      </div>\n",
     "    </div>\n",
     "  </div>\n",
     "</div>"
